@@ -14,6 +14,7 @@
 "UI_OPTIONS","User interface","Options panel header."
 "SHOW_BUTTONS","Show status buttons","Checkbox in options panel."
 "TRANSPARENT_UI","Use transparent button backgrounds","Checkbox in options panel."
+"INITIAL_STATUS","Enable anarchy after loading is completed","Checkbox in options panel."
 "RESET_POS","Reset button position","Button in options panel."
 "OPTIONS_LIMIT","More trees","Options panel header."
 "LOAD_OPTIONS","Loading actions","Options panel header."
